# picowater

./: CMakeLists.txt  README.md  network.c  network.h  picowater.c  picowater.cpp  picowater.h  rtc_ds3231.c  rtc_ds3231.h  schema.xml  sleep_utils.c  ssd1306.h  wifi.c  wifi.h
case/: bottom.scad  bottom.stl  common.scad  top.scad  top.stl  upssensor_top.scad  upssensor_top.stl
hw/: Lunasys_Library.bak  Lunasys_Library.kicad_sym  fp-info-cache  fp-lib-table  picowater.kicad_pcb  picowater.kicad_prl  picowater.kicad_pro  picowater.kicad_sch  picowater.stl  picowater_JLCPCB_BoM.csv  picowater_JLCPCB_top_Pos.csv  sym-lib-table
hw/Lunasys_Library.pretty/: DS3231 AT24C32.kicad_mod  MP1584EN DC-DC 3A Step-Down.kicad_mod  RPi_Pico_SMD_TH_LUNASYS.kicad_mod
hw/cell.pretty/: BC501SM-TR.kicad_sym  MPD_BC501SM-TR.kicad_mod
mcp9808/: mcp9808.c  mcp9808.h
pcf8563/: pcf8563.c  pcf8563.h
server/: Database.php  tcp_water.php  water.config.php  water.php  water_graph.php  water_view.php
